# remnashop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  Makefile  docker-compose.local.yml  docker-compose.prod.external.yml  docker-compose.prod.internal.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: prod-docker-release.yml
assets/: README.md
assets/translations/ru/: buttons.ftl  custom.ftl  events.ftl  messages.ftl  notifications.ftl  utils.ftl
src/: lifespan.py
src/application/common/: __init__.py  bot.py  cryptography.py  dispatcher.py  email_sender.py  event_bus.py  file_downloader.py  http_client.py  interactor.py  notifier.py  password_hasher.py  policy.py  redirect.py  remnawave.py  uow.py  xui_reader.py
src/application/dto/: __init__.py  ad_link.py  base.py  broadcast.py  device.py  message_payload.py  payment_gateway.py  plan.py  promocode.py  referral.py  settings.py  statistics.py  subscription.py  transaction.py  user.py
src/application/events/: __init__.py  base.py  system.py  user.py
src/application/services/: __init__.py  bot.py  device_binding.py  notification.py  pricing.py  remnawave.py
src/application/use_cases/: logs.py  menu.py  payment_gateway.py  redirect.py  referral.py  transaction.py
src/core/: constants.py  enums.py  exceptions.py  logger.py  types.py
src/core/config/: app.py  bot.py  database.py  email.py  remnawave.py  tobevpn.py
src/core/utils/: converters.py  device_description.py  encoding.py  i18n_helpers.py  time.py  validators.py
src/infrastructure/database/: uow.py
src/infrastructure/payment_gateways/: __init__.py  base.py  cryptomus.py  cryptopay.py  freekassa.py  mulen_pay.py  pay_master.py  platega.py  robokassa.py  telegram_stars.py  url_pay.py  valutix.py  wata.py  yookassa.py  yoomoney.py
src/infrastructure/redis/: activity.py  auth.py  cache.py  keys.py
src/infrastructure/services/: __init__.py  bot.py  command.py  cryptography.py  dispatcher.py  email_sender.py  event_bus.py  file_downloader.py  health.py  http_client.py  i18n.py  notification.py  notification_queue.py  password_hasher.py  redirect.py  remnawave.py  translator.py  webhook.py  xui_reader.py
src/infrastructure/taskiq/: worker.py
src/telegram/: dispatcher.py  keyboards.py  states.py  utils.py
src/telegram/widgets/: banner.py  (+4 more)
src/web/: app.py  dependencies.py
(+315 files in other folders)
